--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -78,232 +78,4 @@
 </section>
 
 <!-- /Services section -->
-<!-- footer top -->
-<section class="footerw3-top py-lg-5">
-  <div class="container py-md-5">
-    <!-- footer top row -->
-    <div class="row py-5">
-      <div class="col-md-4">
-        <img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
-        <h4 class="feed-title my-3">Email and Live chat
-          <span>24/7</span>
-        </h4>
-        <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
-      </div>
-      <div class="col-md-4 my-md-0 my-4">
-        <img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
-        <h4 class="feed-title my-3">any query or clarifiactions?
-          <span>call us</span>
-        </h4>
-        <p class="mb-0">+ 10 000 12345 </p>
-        <p>+ 10 000 12346 </p>
-      </div>
-      <div class="col-md-4">
-        <img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
-        <h4 class="feed-title my-3">creative thoughts
-          <span>informatics</span>
-        </h4>
-        <p>Ras ultricies ligula sed magna Donec rutrum congue leo eget.</p>
-      </div>
-
-    </div>
-    <!-- //footer top row -->
-  </div>
-</section>
-
-<!-- footer top -->
-<!-- footer -->
-<footer class="py-sm-5">
-  <div class="container">
-    <div class="row py-5">
-      <!-- footer grid1 -->
-      <div class="col-lg-3 col-sm-6">
-        <h2>
-          <a class="navbar-brand" href="index">
-            AVBank
-          </a>
-        </h2>
-        <div class="fv3-contact mt-3">
-          <span class="fas fa-home mr-2"></span>
-          <p>90 Street, City, State 34789.</p>
-        </div>
-        <div class="fv3-contact">
-          <span class="fas fa-phone-volume mr-2"></span>
-          <p>+456 123 7890</p>
-        </div>
-        <div class="fv3-contact">
-          <span class="fas fa-envelope-open mr-2"></span>
-          <a href="mailto:example@email.com" class="text-secondary">info@example.com</a>
-        </div>
-      </div>
-      <!-- //footer grid1 -->
-      <!-- footer grid2 -->
-      <div class="col-lg-3  col-sm-6 footv3-left text-lg-center my-sm-0 mt-5">
-        <h3 class="mb-3">our services</h3>
-        <ul class="list-agileits">
-          <li>
-            <a href="index">
-              quality resourcing
-            </a>
-          </li>
-          <li class="my-3">
-            <a href="about">
-              inventory tracking
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="services">
-              financial planning
-            </a>
-          </li>
-          <li>
-            <a href="contact">
-              budget friendly
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- //footer grid2 -->
-      <!-- footer grid3 -->
-      <div class="col-lg-3  col-sm-6 footv3-left text-lg-center my-lg-0 mt-sm-5 mt-5">
-        <h3 class="mb-3">Navigation</h3>
-        <ul class="list-agileits">
-          <li>
-            <a href="index">
-              Home
-            </a>
-          </li>
-          <li class="my-3">
-            <a href="about">
-              About Us
-            </a>
-          </li>
-          <li class="mb-3">
-            <a href="services">
-              Services
-            </a>
-          </li>
-          <li>
-            <a href="contact">
-              Contact Us
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- //footer grid3 -->
-      <!-- footer grid4  -->
-      <div class="col-lg-3  col-sm-6 footv3-left my-lg-0 mt-5">
-        <h3 class="mb-3">subscribe to newsletter</h3>
-        <form action="#" method="post">
-          <div class="form-group">
-            <input type="email" class="form-control  bg-dark border-0" id="email" placeholder="Enter email" name="email" required>
-          </div>
-          <div class="form-group">
-            <input type="Submit" class="form-control bg-secondary text-white border-0" id="sub" value="submit" name="sub">
-          </div>
-        </form>
-      </div>
-      <!-- //footer grid4 -->
-    </div>
-    <div class="cpy-right text-center  pt-5 pb-sm-0 pb-3">
-      <p class="text-secondary">© 2018 AVBank. All rights reserved | Design by
-        <a href="http://w3layouts.com" class="text-white"> W3layouts.</a>
-      </p>
-    </div>
-  </div>
-  <!-- //footer container -->
-</footer>
-<!-- //footer -->
-<!-- Login modal -->
-<div class="modal fade general-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg general-modal" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Your Security Preferences</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body general-modal">
-        <center>
-          <h3>Your Enrolled Factors</h3>
-          <br>
-          <div id="factorsApp" class="btn-group-vertical">
-            <factor-item v-for="factor in factors" :factor="factor" :key="factor._id"/>
-          </div>
-          <br>
-          <br>
-          <button class='btn btn-danger' onclick="resetMfa()">reset MFA</button>
-          <button class='btn btn-danger' onclick="reEnroll()">renroll</button>
-        </center>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- //Login modal -->
-<!-- Register modal -->
-<div class="modal fade general-modal" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel1">Sign In to Renenroll</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body general-modal">
-        <div id="okta"></div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- // Register modal -->
-<!-- subscribe form -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel2">Subscribe now!</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form action="#" method="post">
-          <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Email</label>
-            <input type="email" class="form-control border" placeholder=" " name="email" id="usermail" required="">
-          </div>
-          <div class="right-w3l">
-            <input type="submit" class="form-control text-white" value="Subscribe">
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- //subscribe form -->
-<!-- js-->
-
-<script src="js/accountVue.js"></script>
-<script src="js/jquery-2.2.3.min.js"></script>
-<!--  magnific-popup  -->
-<!-- <script src="js/jquery.magnific-popup.js"></script> -->
-<!-- move-top -->
-<script src="js/move-top.js"></script>
-<!-- easing -->
-<script src="js/easing.js"></script>
-<!-- smooth scroll -->
-<script src="js/SmoothScroll.min.js"></script>
-<!--  necessary snippets for few javascript files -->
-<script src="js/Avbank.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.js "></script>
-<script src="js/OktaAuth.js "></script>
-
-
-
-
-</body>
-
-</html>
+<%- include('footer') -%>
