--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,172 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE HTML>
-<html lang="zxx">
-
-<head>
-    <title>AVBank Corporate Category Flat Bootstrap Responsive Website Template | Blog row Style3 :: w3layouts</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <meta name="keywords" content="AVBank Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-    <script>
-        addEventListener("load", function () {
-            setTimeout(hideURLbar, 0);
-        }, false);
-
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script>
- <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <!-- Custom CSS -->
-    <link href="css/style.css" rel='stylesheet' type='text/css' />
-    <!-- font-awesome icons -->
-    <link href="css/fontawesome-all.min.css" rel="stylesheet">
-    <!-- //Custom Theme files -->
-    <!--webfonts-->
-    <link href="//fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-    <!-- //webfonts -->
-</head>
-
-<body>
-    <!-- header -->
-    <header>
-        <div class="container">
-            <!-- nav -->
-            <nav class="navbar navbar-expand-lg navbar-light py-4">
-                <!-- logo -->
-                <h1>
-                    <a class="navbar-brand" href="index">
-                        AVBank
-                    </a>
-                </h1>
-                <!-- //logo -->
-                <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- main nav -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-lg-auto text-center">
-                        <li class="nav-item mr-lg-3">
-                            <a class="nav-link" href="index">Home
-                                <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item mr-lg-3">
-                            <a class="nav-link" href="about">about</a>
-                        </li>
-                        <li class="dropdown nav-item active">
-                            <a href="#" data-toggle="dropdown" class="nav-link">
-                                Pages
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu multi-level" role="menu">
-                                <li class="nav-item">
-                                    <a href="portfolio" class="nav-link">Portfolio</a>
-                                </li>
-                                <li class="dropdown-submenu">
-                                    <a tabindex="-1" href="#" class="nav-link">Blog</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="nav-link">Layout 1</a>
-                                            <ul class="dropdown-menu">
-                                                <li class="nav-item">
-                                                    <a href="blog3_style1" class="nav-link">Left Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog3_style2" class="nav-link">Right Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog3_style3" class="nav-link">Without Sidebar</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="nav-link">Layout 2</a>
-                                            <ul class="dropdown-menu">
-                                                <li class="nav-item">
-                                                    <a href="blog2_style1" class="nav-link">Left Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog2_style2" class="nav-link">Right Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog2_style3" class="nav-link">Without Sidebar</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="nav-link">Layout 3</a>
-                                            <ul class="dropdown-menu">
-                                                <li class="nav-item">
-                                                    <a href="blog_row_style1" class="nav-link">Left Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog_row_style2" class="nav-link">Right Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog_row_style3" class="nav-link">Without Sidebar</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown-submenu">
-                                            <a href="#" class="nav-link">Layout 4</a>
-                                            <ul class="dropdown-menu">
-                                                <li class="nav-item">
-                                                    <a href="blog_col_style1" class="nav-link">Left Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog_col_style2" class="nav-link">Right Sidebar</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="blog_col_style3" class="nav-link">Without Sidebar</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="soon" class="nav-link">Coming soon</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="maintenance" class="nav-link">Maintenance</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="error" class="nav-link">404</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="typo" class="nav-link">Typography</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item mr-lg-3">
-                            <a class="nav-link" href="services">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact">contact</a>
-                        </li>
-                        <li>
-                            <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-                                Login
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-                <!-- //main nav -->
-            </nav>
-            <!-- //nav -->
-        </div>
-    </header>
-    <!-- //header -->
+<%- include('header') -%>
     <!-- inner banner -->
     <div class="inner_banner layer" id="home">
         <div class="container">
