--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -145,29 +145,8 @@
 				</div>
 				<div class="modal-body">
           <script>
-            
-            /*
-          var config = {
-  url: 'https://login.vanbeeklabs.com',
-  tokenManager: {
-    storage: 'sessionStorage'
-  },
-  issuer: 'https://login.vanbeeklabs.com/oauth2/default',
-  clientId: '0oahikuahrKHsYSTZ0h7',
-  redirectUri: 'http://localhost:3000/authorization-code/callback',
 
-  // Override the default authorize and userinfo URLs
-  authorizeUrl: 'https://login.vanbeeklabs.com/oauth2/default/v1/authorize',
-  userinfoUrl: 'https://login.vanbeeklabs.com/oauth2/default/v1/userinfo'
-};
-*/
-
-var validationOptions = {
-  issuer: 'https://login.vanbeeklabs.com/oauth2/default'
-}
-
-
-var authClient = new OktaAuth(config);
+var authClient = new OktaAuth(config); // config is defined in views/header.ejs
 //// jpf commented out
 // window.alert("TEST")
 $( document ).ready(function() {
@@ -195,7 +174,7 @@ var do_login = function() {
       // Step #1: get sessionToken
       console.log('sessionToken = ', transaction.sessionToken);
 
-      authClient.session.setCookieAndRedirect(transaction.sessionToken, "http://localhost:3000/accountPage");
+      authClient.session.setCookieAndRedirect(transaction.sessionToken, "/accountPage");
 
     } else {
       throw 'We cannot handle the ' + transaction.status + ' status';
