--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -174,7 +174,7 @@ var do_login = function() {
       // Step #1: get sessionToken
       console.log('sessionToken = ', transaction.sessionToken);
 
-      authClient.session.setCookieAndRedirect(transaction.sessionToken, "/accountPage");
+      authClient.session.setCookieAndRedirect(transaction.sessionToken, window.location.origin + "/accountPage");
 
     } else {
       throw 'We cannot handle the ' + transaction.status + ' status';
@@ -330,7 +330,6 @@ var do_login = function() {
 <!-- Bootstrap Core JavaScript -->
 <!-- <script src="/js/bootstrap.js "></script> -->
 <script src="/js/oktaAuth.js "></script>
-<script src="/js/oktaNormalLogin.js "></script>
 </body>
 
 </html>
