--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -12,6 +12,8 @@
 <%- include partials/openAccount.ejs %>
 <div class="services-bot-agile2 py-sm-5 py-3">
   <button type="button" onclick="openAccount()" class="btn btn-danger btn-lg float-right">Open Account</button>
+  <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#tokenModal">OAuth details</button>
+
   <div class="row py-lg-5">
 
     <div class="col-lg-2  bb-left">
@@ -30,7 +32,38 @@
     </div>
   </div>
 </div>
-<!-- //test description -->
+
+<!-- Start Token Viewer -->
+        <div class="modal" id="tokenModal" tabindex="-1" role="dialog" aria-hidden="false">
+          <div class="modal-dialog modal-jf" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">OAuth Tokens</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="card-deck">
+                  <div class="card" v-for="card in cards">
+                    <p v-bind:class="['card-header', card.name]">[[ card.name ]]</p>
+                    <div class="card-body">
+                      <b>JWT</b>
+                      <textarea class="form-control" readonly="" rows="12" cols="100%" style="font-size:10px">[[ card.jwt ]]</textarea>
+                      <b>Header</b>
+                      <textarea class="form-control" readonly="" rows="5" cols="100%" style="font-size:11px">[[ header(card.jwt) ]]</textarea>
+                      <b>Payload</b>
+                      <textarea class="form-control" readonly="" rows="30" cols="100%" style="font-size:11px">[[ payload(card.jwt) ]]</textarea>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+<!-- End Token Viewer -->
+
+<!-- //test description
 <div class="modal fade general-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg general-modal" role="document">
     <div class="modal-content">
